<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABMObrasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">



        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingLeft="16dp"
            android:paddingTop="70dp"
            android:paddingRight="16dp"
            android:paddingBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/llMain"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/btn_buscador"
                    android:onClick="buscar"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/busqueda"></ImageView>>

                <EditText

                    android:id="@+id/txt_buscador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/buscador"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>




            <TextView
                android:id="@+id/txt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="text"
                android:layout_marginTop="50dp"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sinopsis"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_teatro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <EditText
                android:id="@+id/txt_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inicio"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_precio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <EditText
                android:id="@+id/txt_fin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fin"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_inicio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/btnNuevaObra"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/color_verde"
                android:onClick="cargarObra"
                android:text="@string/crearObra"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_fin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnEditarObra"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/color_azul"
                android:onClick="editarObra"
                android:text="@string/EditarObra"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnNuevaObra"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnEliminarObra"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/color_narajna"
                android:onClick="eliminarObra"
                android:text="@string/EliminarObra"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnEditarObra"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>