<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuarioActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingLeft="16dp"
            android:paddingTop="70dp"
            android:paddingRight="16dp"
            android:paddingBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre"
                android:inputType="text"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellido"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                android:inputType="text"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_apellido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_pass"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txt_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_pass"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/buttonRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#ce4638"
                android:onClick="registrarUsuario"
                android:text="@string/txt_registrarme"
                app:layout_constraintTop_toBottomOf="@+id/txt_pass2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>