<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/fototeatro">


    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/info"
                android:background="@drawable/background_rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tit_detalle"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="titulo de la obra"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sinop_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="sinopsis de la obra"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tit_detalle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <Button
                        android:id="@+id/vermapa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#283593"
                        android:onClick="verMapa"
                        android:text="@string/txt_ubicacion"
                        android:backgroundTint="#80F1F1F1"
                        app:strokeColor="#283593"
                        android:textStyle="bold"
                        style="?attr/materialButtonOutlinedStyle"
                        app:cornerRadius="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="end|center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/precio_detalle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="precio"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="50dp"
                            app:layout_constraintBaseline_toBaselineOf="@id/vermapa"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/vermapa" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_below="@id/info"
                android:layout_marginTop="64dp"
                android:background="@drawable/background_rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reserva"
                    android:textSize="18dp"
                    android:gravity="start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/sp_cantidad"
                    app:cornerRadius="20dp"
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Spinner
                    android:id="@+id/funciones_obra"
                    app:cornerRadius="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="end|center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/lugares_detalle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="butacas"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cornerRadius="20dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="#EF5350"
                    android:text="@string/btnreservar"
                    android:onClick="reservar"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

